# omx-control

./: .gitignore  README.md  npz_view.py  test_gamepad.py
backend/: main.py  pyproject.toml  test_zenoh.py
backend/bridge/: calibration_router.py  zenoh_bridge.py
backend/core/: base_node.py  common.py  joint_state_cache.py  topic_map.py  types.py  units.py  zenoh_session.py
backend/modules/calibration/: hand_eye.py  intrinsic.py  loader.py  pose_estimator.py
backend/modules/camera/: capture.py  stream.py
backend/modules/detector/: base_detector.py  color_detector.py  yolo_detector.py
backend/modules/dynamixel/: driver.py  motor_config.py
backend/modules/gamepad/: driver.py  mapper.py
backend/modules/kinematics/: motion_commands.py  motion_modes.py  pybullet_ik.py  solver.py  trajectory_runner.py
backend/modules/task/: step_executor.py  step_types.py  task_runner.py
backend/modules/task/tasks/: pick_and_place.py
backend/nodes/: calibration_node.py  camera_node.py  detector_node.py  gamepad_node.py  motion_node.py  motor_node.py  task_node.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/api/: bridge.ts
frontend/src/constants/: index.ts  topics.ts
frontend/src/hooks/: useBridge.ts  useCalibrationResults.ts  useJointControl.ts  useMotion.ts  useTask.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Calibration.tsx  Dashboard.tsx  Motion.tsx  PickAndPlace.tsx  Settings.tsx  (+1 more)
robot/calibration/: hand_eye.npz  intrinsic.npz
robot/config/: motors.yaml
(+39 files in other folders)
