[project]
name = "omx-control-backend"
version = "0.1.0"
description = "OMX Control Backend"
requires-python = ">=3.11"

dependencies = [
    "eclipse-zenoh>=1.0.0",
    "dynamixel-sdk>=3.7.31",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pybullet>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pyright",
]

[tool.ruff]
line-length = 88
target-version = "py311"